--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gh-pages-deploy",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "deploy to gh-pages with one command",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "chalk": "^1.1.1",
     "gasket": "^2.0.0",
     "prompt": "1.0.0",
-    "require-module": "^0.1.0"
+    "require-module": "^0.1.0",
+    "string-format": "^2.0.0"
   }
 }
